Apply Thijs' fix ("Make the AdiumHelp page fit without scrollbars by default").

--- a/AdiumHelp/css/accessPage.css
+++ b/AdiumHelp/css/accessPage.css
@@ -43,7 +43,7 @@ a:hover {
 }
 #contentleft {
 	margin-top:38px;
-	width:235px;
+	width:210px;
 	float:left;
 }
 #contentcenter {
@@ -63,13 +63,6 @@ a:hover {
 }
 #contentbottom {
     text-align: center;
-}
-#frame {
-	text-align:left;
-	margin-top:12px;
-	margin-right:auto;
-	margin-left:auto;
-	width:500px;
 }
 .space17 {
 	padding-top:17px;
